# xmoig

./: .gitignore  .gitmodules  README.org  grask.scm  stack.yaml
config/hypr/: hyprland.conf  hyprlock.conf  hyprpaper.conf
config/mpd/: .gitignore  mpd.conf
config/picom/: picom.conf
config/rofi/: README.org  config.rasi
config/stumpwm/: config
config/waybar/: config
config/xmobar/: xmobarrc
config/xmonad/: cabal.project  grask-xmonad.cabal  stack.yaml  xmonad.hs
