name: grask-xmonad
version: 0.0.0
description: my xmonad executable
author: Liszt21
build-type: Simple
cabal-version: >= 2.0

executable grask-xmonad
  main-is: xmonad.hs
  hs-source-dirs: .
  default-language: Haskell2010
  build-depends: base >=4.7 && <5
               , containers >=0.6 && <0.7
               , process >=1.6.5 && <1.7
               , stm >=2.5 && <2.6
               , xmonad >=0.17
               , xmonad-contrib >=0.17
               , xmobar >=0.46
               , X11 >=1.9 && <2
  ghc-options: -threaded -rtsopts -O2 "-with-rtsopts=-N6 -M2g"